--- a/stats/static/style.css
+++ b/stats/static/style.css
@@ -15,10 +15,18 @@
     padding: 10px;
 }
 
+.lower-banner {
+    background-color: var(--color_light_blue);
+    width: 100%;
+    height: 20px;
+    margin: 0px;
+}
+
 .vertical-center {
     margin: 0;
     position: relative;
     top: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
-  }
+}
+
