--- a/stats/templates/stats/base.html
+++ b/stats/templates/stats/base.html
@@ -6,14 +6,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="../../static/style.css" type="text/css">
+        
 
         <style type="text/css">
-            body { background: rgb(220, 220, 220) !important; } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
+            body { background: rgb(255, 255, 255) !important; } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
             .color1 {color: rgb(227,114,34)}
             .color2 {color: rgb(7,136,155)}
             .color3 {color: rgb(102,185,191)}
         </style>
+
+        <link rel="stylesheet" href="../../static/style.css" type="text/css">
+
+        
 
         <title>
         {% block title %}
@@ -22,7 +26,7 @@
 
     </head>
 
-    <body class="">
+    <body>
 
         <!-- The banner at the top of the page -->
         <div class="banner">
