--- a/stats/templates/stats/home.html
+++ b/stats/templates/stats/home.html
@@ -9,12 +9,12 @@ NHL Stats
 
 <div class="m-3">
 
-    <form name='submit' action="{{request.get_full_path}}" method='POST'>
+    <form name='submit' action="filter_submit/" method='POST'>
         {% csrf_token %}
 
         <div class="form-group">
             <h5 class="">Enter filter here</h5>
-            <textarea type='text' name="filter_string" placeholder="gamesPlayed > 20&#13;&#10;year = 20182019" class="form-control" style= "height: 200px"></textarea>
+            <textarea type='text' name="filter_string" placeholder="gamesPlayed >= 20&#013;&#010;year = 20182019" class="form-control" style= "height: 200px">{{filter_box}}</textarea>
         </div>
 
         <div class="form-group">
@@ -40,12 +40,19 @@ NHL Stats
 
     {% render_table table %}
 
-    <form name="submit" action="{{request.get_full_path}}" method="POST">
+    <form name="submit" action="metric_submit/" method="POST">
         {% csrf_token %}
 
-        <textarea type='text' name="filter_string" placeholder="" class="form-control" style= "height: 200px"></textarea>
+        <div class="form-group">
+            <h5 class="">Define metric here</h5>
+            <input type="text" name="label" placeholder="" class="form-control">
+            <br>
+            <textarea type='text' name="metric_string" placeholder="" class="form-control" style= "height: 200px"></textarea>
+        </div>
 
-        <button type="submit" class="btn btn-primary" name="current_url" value="{{request.get_full_path}}">Create Metric</button>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary" name="current_url" value="{{request.get_full_path}}">Create Metric</button>
+        </div>
     </form>
 
 </div>
