--- a/stats/templates/stats/home.html
+++ b/stats/templates/stats/home.html
@@ -9,7 +9,7 @@ NHL Stats
 
 <div class="m-3">
 
-    <form name='submit' action="filter_submit/" method='POST'>
+    <form name='submit' action="filter_submit{{request.get_full_path}}" method='POST'>
         {% csrf_token %}
 
         <div class="form-group">
@@ -45,9 +45,7 @@ NHL Stats
 
         <div class="form-group">
             <h5 class="">Define metric here</h5>
-            <input type="text" name="label" placeholder="" class="form-control">
-            <br>
-            <textarea type='text' name="metric_string" placeholder="" class="form-control" style= "height: 200px"></textarea>
+            <textarea type='text' name="metric_string" placeholder="" class="form-control" style= "height: 200px">{{metric_box}}</textarea>
         </div>
 
         <div class="form-group">
