Finished url overhaul, added metric error messages, deleted unused code

--- a/stats/templates/stats/base.html
+++ b/stats/templates/stats/base.html
@@ -30,7 +30,7 @@
 
         <!-- The banner at the top of the page -->
         <div class="banner row">
-            <h1 class="vertical-center col-10">Banner Text</h1>
+            <h1 class="vertical-center col-10"></h1>
             <div class="col-18">
                 {% if user.is_authenticated %}
                     <p style="color: white">Hi {{ user.username }}!</p>
