--- a/stats/templates/stats/base.html
+++ b/stats/templates/stats/base.html
@@ -13,6 +13,14 @@
             .color1 {color: rgb(227,114,34)}
             .color2 {color: rgb(7,136,155)}
             .color3 {color: rgb(102,185,191)}
+            .banner {
+                background-color: rgb(7,136,155);
+                color: white;
+                width: 100%;
+                height: 100px;
+                margin: 0px;
+                padding: 10px;
+            }
         </style>
 
         {% load static %}
